--- a/views/index.ejs
+++ b/views/index.ejs
@@ -101,7 +101,7 @@
   <main class="form-signin w-100 m-auto">
     <form action="" method="post">
       <img class="mb-4" src=" /images/rubicamp.png" width="100%">
-      <h1 class="h3 mb-3 fw-normal" style="text-align: center;">Please sign in</h1>
+      <h1 class="h3 mb-3 fw-normal" style="text-align: center;">Please Sign In</h1>
 
       <div class="form-floating">
         <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
@@ -111,8 +111,8 @@
         <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
         <label for="floatingPassword">Password</label>
       </div>
-      <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
-      <p class="text-center">Doesn't have a account? please</p>
+      <button class="btn btn-primary w-100 py-2 mt-2" type="submit">Sign in</button>
+      <p class="text-center">Doesn't have a account? please <a href="/register">Sign Up</a></p>
       <p class="mt-5 mb-3 text-body-secondary" style="text-align: center;">@ 2017–2023</p>
     </form>
   </main>
