--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,11 +7,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Signup - Rubicamp</title>
-
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/sign-in/">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
-    <link href="/docs/5.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
     <link rel="apple-touch-icon" href="/docs/5.3/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
     <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
     <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
@@ -90,40 +91,35 @@
             --bs-btn-active-bg: #5a23c8;
             --bs-btn-active-border-color: #5a23c8;
         }
-
-        .bd-mode-toggle {
-            z-index: 1500;
-        }
-
-        .bd-mode-toggle .dropdown-menu .active .bi {
-            display: block !important;
-        }
     </style>
 
-    <link href="sign-in.css" rel="stylesheet">
+    <link href="stylesheets/sign-in.css" rel="stylesheet">
 </head>
 
-<body class="d-flex align-items-center py-4 bg-body-tertiary">
-    
+<body class="d-flex align-items-center py-4" style="background-color:rgba(245, 245, 245);">
+
     <main class="form-signin w-100 m-auto">
-        <form>
-            <img class="mb-4" src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
-            <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+        <form action="" method="post">
+            <img class="mb-4" src="/images/rubicamp.png" width="100%">
+            <h1 class="h3 mb-3 fw-normal" style="text-align: center;">Please Sign Up</h1>
 
             <div class="form-floating">
                 <input type="email" class="form-control" id="floatingInput" name="email" placeholder="name@example.com">
                 <label for="floatingInput">Email address</label>
             </div>
             <div class="form-floating">
-                <input type="password" class="form-control" id="floatingPassword" name="password" placeholder="Password">
+                <input type="password" class="form-control" id="floatingPassword" name="password"
+                    placeholder="Password">
                 <label for="floatingPassword">Password</label>
             </div>
-            <div class="form-floating">
-                <input type="password" class="form-control" id="floatingPassword" name="repassword" placeholder="Retype Password">
+            <div class="form-floating mt-0 ">
+                <input type="password" class="form-control" id="floatingPassword" name="repassword"
+                    placeholder="Retype Password">
                 <label for="floatingPassword">Retype Password</label>
             </div>
-            <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
-            <p class="mt-5 mb-3 text-body-secondary">&copy; 2017–2023</p>
+            <button class="btn btn-primary w-100 py-2 mt-2 " type="submit">Sign Up</button>
+            <p class="text-center">Have a account? Please <a href="/">Sign In</a></p>
+            <p class="mt-5 mb-3 text-body-secondary" style="text-align: center;">@ 2017–2023</p>
         </form>
     </main>
     <script src="/docs/5.3/dist/js/bootstrap.bundle.min.js"
