--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -14,7 +14,7 @@
                   <div class="row mb-3">
                     <label for="tittle" class="col-sm-2 col-form-label">Deadline</label>
                     <div class="contain-input>
-                      <input type="datetime-local" id="deadline" name="deadline">
+                      <input type="datetime-local" id="deadline" name="insert your tittle">
                     </div>
                   </div>
                   <div class="position-relative ">
