--- a/views/list.ejs
+++ b/views/list.ejs
@@ -31,12 +31,13 @@
             <div class="col-sm-10">
                 <select class="form-select" aria-label="Default select example">
                     <option selected>-select complete-</option>
-                    <option value="1">Done</option>
-                    <option value="2">Not Yet</option>
+                    <option value="1">done</option>
+                    <option value="2">not yet</option>
                 </select>
             </div>
-            <div class="row mb-3">
-                <label for="operation" class="col-sm-2 col-form-label">Operation</label>
+            <div class="row mb-3 op">
+                <label for="operation" class="col-sm-2 pt-0">Operation</label>
+                <div class="col-sm-10 rad-list">
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
                     <label class="form-check-label" for="flexRadioDefault1">
@@ -49,10 +50,30 @@
                       AND
                     </label>
                   </div>
-
+                </div>
             </div>
         </div>
-        <div class="card-footer ">
-
-
-            <%- include('partials/footer')%>
+        <div class="btn-group-search">
+        <button type="button" class="btn btn-primary">Save</button>
+        <button type="button" class="btn btn-warning">Back</button>
+        </div>
+      </div>
+</form>
+<div class="line"></div>
+<div class="tab-list">
+  <table class="table table-striped">
+    <tr>
+      <th>No</th>
+      <th>Title</th>
+      <th>Complete</th>
+      <th>Deadline</th>
+      <th>Actions</th>
+    </tr>
+  </table>
+  </div>
+  <div class="card-footer">
+    <button class="btn btn-primary" type="button">+</button>
+  </div>
+</div>
+</div>
+<%- include('partials/footer')%>
