--- a/views/add.ejs
+++ b/views/add.ejs
@@ -8,16 +8,16 @@
                 <div class="row mb-3">
                     <label for="tittle" class="col-sm-2 col-form-label">Tittle</label>
                     <div class="col-sm-10">
-                      <input type="tittle" class="form-control" id="tittle" placeholder="insert your tittle">
+                        <input type="tittle" class="form-control" id="tittle" placeholder="insert your tittle">
                     </div>
-                  </div>                
+                </div>
         </div>
         <div class="card-footer">
             <div class="foot-form">
                 <div class="formBtm">
-                    <button class="btn btn-primary" type="submit">save</button>
+                    <button class="btn btn-primary" type="submit"><i class="fa-solid fa-floppy-disk"></i></button>
                     <a href="/" class="btn">
-                        <button class="btn btn-warning" type="button">back</button>
+                        <button class="btn btn-warning" type="button"><i class="fa-solid fa-rotate-left"></i></button>
                     </a>
                 </div>
             </div>
