--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,45 +1,38 @@
 <%- include('partials/header')%>
-    <div class="card">
-        <div class="card-header">
-            <h1 class="text-center">Updating Data</h1>
-        </div>
-        <div class="card-body ">
-            <form action="" method="post">
-                <div class="row mb-3">
-                    <label for="tittle" class="col-sm-2 col-form-label">Tittle</label>
-                    <div class="col-sm-10">
-                      <input type="tittle" class="form-control" id="tittle" placeholder="insert your tittle">
-                    </div>
-                  </div>
-                  <div class="row mb-3">
-                    <label for="tittle" class="col-sm-2 col-form-label">Deadline</label>
-                    <div class="contain-input>
-                      <input type="datetime-local" id="deadline" name="insert your tittle">
-                    </div>
-                  </div>
-                  <div class="position-relative ">
-                    <fieldset class="row mb-3">
-                    <label for="tittle" class="col-sm-2 col-form-label">Completed</label>
-                    <div class="col-sm-10">
-                  <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
-                    <label class="form-check-label" for="flexCheckIndeterminate">
-                      Done
-                    </label>
-                  </div>
-                </fieldset>
-                </div>
-        </div>
-        <div class="card-footer">
-            <div class="foot-form">
-                <div class="formBtm">
-                    <button class="btn btn-primary" type="submit">save</button>
-                    <a href="/" class="btn">
-                        <button class="btn btn-warning" type="button">back</button>
-                    </a>
-                </div>
-            </div>
-        </div>
-        </form>
+  <div class="card">
+    <div class="card-header">
+      <h1 class="text-center">Updating Data</h1>
     </div>
-    <%- include('partials/footer')%>
+    <div class="card-body">
+      <form action="" method="post">
+        <div class="row mb-3">
+          <label for="tittle" class="col-sm-2 col-form-label">Tittle</label>
+          <div class="col-sm-10">
+            <input type="tittle" class="form-control " id="tittle" placeholder="insert ypur tittle">
+          </div>
+        </div>
+        <div class="row mb-3">
+          <label for="startdate" class="col-sm-2 col-form-label">Deadline</label>
+          <div class="col-sm-10">
+            <input type="date" class="form-control" name="startdate">
+          </div>
+        </div>
+        <div class="row mb-3">
+          <legend class="col-form-label col-sm pt-0">Complete</legend>
+          <div class="col-sm-10">
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" id="gridCheck1">
+              <label class="form-check-label" for="gridCheck1">
+                Done
+              </label>
+            </div>
+          </div>
+        </div>
+      </form>
+    </div>
+    <div class="card-footer">
+      <button type="button" class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i></button>
+      <button type="button" class="btn btn-warning"><i class="fa-solid fa-rotate-left"></i></button>
+    </div>
+  </div>
+  <%- include('partials/footer')%>
