--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,22 +1,25 @@
 <%- include('partials/header')%>
-<div class="card">
-  <div class="container-ava bg-light">
-    <div class="item-ava">
-      <div class="ava">
-        <a href="/upload"><img src="images/sampelpic.jpg" alt="avatarpic" class="avatar"></a>
-        <h3>novian@gmail.com</3>
-      </div>
-      <div class="btn-out">
-        <div class="position-relative">
-          <a href="/">
-            <button type="button" class="btn btn-secondary">Secondary</button>
-          </a>
+  <div class="card">
+    <div class="container-ava bg-light">
+      <div class="item-ava">
+        <div class="ava">
+          <a href="/upload"><img src="images/sampelpic.jpg" alt="avatarpic" class="avatar"></a>
+          <h3>wili@gmail.com</3>
+        </div>
+        <div class="btn-out">
+          <div class="position-relative">
+            <a href="/">
+              <button type="button" class="btn btn-secondary"><i class="fa-solid fa-right-from-bracket"></i>Sign
+                Out</button>
+            </a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-    <div class="card-header">
-      <h1 class="text-center">PostgreSQL Breads(Browse,Read,Edit,Add,Delete,Sort)</h1>
+    <div class="card-header head-idx">
+      <div class="head">
+        <h1 class="text-center">PostgreSQL Breads(Browse,Read,Edit,Add,Delete,Sort)</h1>
+      </div>
     </div>
     <div class="card-body ">
       <form action="" method="post">
