--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -104,11 +104,11 @@
       <h1 class="h3 mb-3 fw-normal" style="text-align: center;">Please Sign In</h1>
 
       <div class="form-floating">
-        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+        <input type="email" class="form-control" id="floatingInput" name="email" placeholder="name@example.com">
         <label for="floatingInput">Email address</label>
       </div>
       <div class="form-floating ">
-        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+        <input type="password" class="form-control" id="floatingPassword" name="password" placeholder="Password">
         <label for="floatingPassword">Password</label>
       </div>
       <button class="btn btn-primary w-100 py-2 mt-2" type="submit">Sign in</button>
