--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,3 +16,34 @@ a {
   margin-top: -5px;
 
 }
+
+.container.ava {
+  border-bottom: 1px solid rgb(202, 202, 202);
+  border-radius: 5px 5px 0px 0px;
+  background-color: aqua;
+  padding-bottom: -90px !important ;
+}
+
+.ava {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+
+.avatar {
+  vertical-align: middle;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-left: 10px;
+}
+
+.btn-out {
+  display: flex;
+  justify-content: flex-end;
+  transform: translateY(-1em);
+  margin-right: 10px;
+}
+.item.ava {
+  transform: translateY(1em);
+}
