--- a/views/add.ejs
+++ b/views/add.ejs
@@ -16,7 +16,7 @@
             <div class="foot-form">
                 <div class="formBtm">
                     <button class="btn btn-primary" type="submit"><i class="fa-solid fa-floppy-disk"></i></button>
-                    <a href="/" class="btn">
+                    <a href="/users" class="btn">
                         <button class="btn btn-warning" type="button"><i class="fa-solid fa-rotate-left"></i></button>
                     </a>
                 </div>
