--- a/views/list.ejs
+++ b/views/list.ejs
@@ -3,7 +3,7 @@
     <div class="container-ava bg-light">
       <div class="item-ava">
         <div class="ava">
-          <a href="/upload"><img src="images/sampelpic.jpg" alt="avatarpic" class="avatar"></a>
+          <a href="users/upload"><img src="images/sampelpic.jpg" alt="avatarpic" class="avatar"></a>
           <h3>wili@gmail.com</3>
         </div>
         <div class="btn-out">
@@ -87,7 +87,9 @@
       </table>
     </div>
     <div class="card-footer">
-      <button class="btn btn-primary" type="button">+</button>
+      <a href="users/add">
+        <button class="btn btn-primary" type="button">+</button>
+      </a>
     </div>
   </div>
   </div>
