--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -8,18 +8,17 @@
                 <div class="row mb-3">
                     <label for="tittle" class="col-sm-2 col-form-label">Avatar</label>
                     <div class="col-sm-10">
-                        <input type="file" class="form-control" placeholder="insert your tittle">
+                        <input type="file" class="form-control" name="avatar">
                     </div>
                 </div>
         </div>
         <div class="card-footer">
             <div class="btn-group-search">
                 <button type="button" class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i></button>
-                <button type="button" class="btn btn-warning"><i class="fa-solid fa-rotate-left"></i></button>
+                <a href="/users">
+                    <button type="button" class="btn btn-warning"><i class="fa-solid fa-rotate-left"></i></button>
+                </a>
             </div>
         </div>
     </div>
-
-
-
-    <%- include('partials/footer')%>
+<%- include('partials/footer')%>
