--- a/views/list.ejs
+++ b/views/list.ejs
@@ -4,7 +4,7 @@
       <div class="item-ava">
         <div class="ava">
           <a href="users/upload"><img src="images/sampelpic.jpg" alt="avatarpic" class="avatar"></a>
-          <h3>wili@gmail.com</3>
+          <h3>wili@gmail.com</h3>
         </div>
         <div class="btn-out">
           <div class="position-relative">
