--- a/views/list.ejs
+++ b/views/list.ejs
@@ -3,7 +3,7 @@
     <div class="container-ava bg-light">
       <div class="item-ava">
         <div class="ava">
-          <a href="users/upload"><img src="images/sampelpic.jpg" alt="avatarpic" class="avatar"></a>
+          <a href="users/upload"><img src="images/avatar.png" alt="avatarpic" class="avatar"></a>
           <h3>wili@gmail.com</h3>
         </div>
         <div class="btn-out">
