--- a/views/add.ejs
+++ b/views/add.ejs
@@ -3,12 +3,13 @@
         <div class="card-header">
             <h1 class="text-center">Adding Data</h1>
         </div>
-        <div class="card-body ">
+        <div class="card-body">
             <form action="" method="post">
                 <div class="row mb-3">
                     <label for="tittle" class="col-sm-2 col-form-label">Tittle</label>
                     <div class="col-sm-10">
-                        <input type="tittle" class="form-control" id="tittle" placeholder="insert your tittle">
+                        <input type="text" class="form-control" id="tittle" name="title"
+                            placeholder="insert your tittle" required>
                     </div>
                 </div>
         </div>
