--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -115,6 +115,7 @@
       <p class="text-center">Doesn't have a account? please <a href="/register">Sign Up</a></p>
       <p class="mt-5 mb-3 text-body-secondary" style="text-align: center;">@ 2017–2023</p>
     </form>
+    <%- include('../partials/alert')%>
   </main>
   <script src="/docs/5.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
