--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -121,6 +121,7 @@
             <p class="text-center">Have a account? Please <a href="/">Sign In</a></p>
             <p class="mt-5 mb-3 text-body-secondary" style="text-align: center;">@ 2017–2023</p>
         </form>
+        <%- include('../partials/alert')%>
     </main>
     <script src="/docs/5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
