--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -35,8 +35,10 @@
       </form>
     </div>
     <div class="card-footer">
-      <button type="button" class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i></button>
+      <button type="submit" class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i></button>
+      <a href="/users">
       <button type="button" class="btn btn-warning"><i class="fa-solid fa-rotate-left"></i></button>
+    </a>
     </div>
   </div>
   <%- include('partials/footer')%>
