--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -52,3 +52,38 @@ a {
 .item.ava {
   transform: translateY(1em);
 }
+
+.delete {
+  background-color: #DC3445;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  border-radius: 9px;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  padding-top: 9px;
+  cursor: pointer;
+}
+
+#deleteConfirm {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.delete-content {
+  background-color: #fefefe;
+  margin: 15px auto;
+  padding: 10px;
+  border: 1px solid #888;
+  width: 32%;
+  border-radius: 8px;
+}
