--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -8,7 +8,7 @@
         <div class="row mb-3">
           <label for="tittle" class="col-sm-2 col-form-label">Tittle</label>
           <div class="col-sm-10">
-            <input type="tittle" class="form-control " id="tittle" placeholder="insert ypur tittle"
+            <input type="text" class="form-control " id="title" name="title" placeholder="insert ypur title"
               value="<%= data[0].title%>" required>
           </div>
         </div>
@@ -16,7 +16,7 @@
           <label class="col-sm-2 col-form-label">Deadline</label>
           <div class="col-sm-10">
             <div class="input-group-date" id="datepicker">
-              <input type="datetime-local" class="form-control" name="startdate"
+              <input type="datetime" class="form-control" name="deadline" id="datepicker"
                 value="<%= moment(data[0].deadline).format('YYYY-MM-DD HH:mm')%>" required>
             </div>
           </div>
@@ -32,13 +32,13 @@
             </div>
           </div>
         </div>
+        <div class="card-footer">
+          <button type="submit" class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i></button>
+          <a href="/users">
+            <button type="button" class="btn btn-warning"><i class="fa-solid fa-rotate-left"></i></button>
+          </a>
+        </div>
       </form>
-    </div>
-    <div class="card-footer">
-      <button type="submit" class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i></button>
-      <a href="/users">
-      <button type="button" class="btn btn-warning"><i class="fa-solid fa-rotate-left"></i></button>
-    </a>
     </div>
   </div>
   <%- include('partials/footer')%>
