--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,12 +17,12 @@ a {
   gap: 15px;
 }
 
-.btn.group.search{
+.btn.group.search {
   margin-top: -5px;
 
 }
 
-.container-ava{
+.container-ava {
   border-bottom: 1px solid rgb(202, 202, 202);
   border-radius: 5px 5px 0px 0px;
   background-color: aqua;
@@ -49,41 +49,127 @@ a {
   transform: translateY(-2em);
   margin-right: 10px;
 }
+
 .item.ava {
   transform: translateY(1em);
 }
-
-.delete {
-  background-color: #DC3445;
-  display: inline-block;
-  width: 40px;
-  height: 40px;
-  border-radius: 9px;
-  color: white;
-  text-align: center;
-  padding: 10px;
-  padding-top: 9px;
+#notif {
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 2;
   cursor: pointer;
 }
 
-#deleteConfirm {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
+.modal-dialog {
+  position: relative;
+  width: 35%;
+  margin: 1% auto 23% auto;
+  pointer-events: none;
 }
 
-.delete-content {
-  background-color: #fefefe;
-  margin: 15px auto;
-  padding: 10px;
-  border: 1px solid #888;
-  width: 32%;
-  border-radius: 8px;
+.modal-content {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 100%;
+  pointer-events: auto;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 0.4rem;
+  outline: 0;
+}
+
+.modal-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding: 1rem;
+  border-bottom: 1px solid #e9ecef;
+  border-top-left-radius: 0.4rem;
+  border-top-right-radius: 0.4rem;
+}
+
+.modal-title {
+  margin-bottom: 0;
+  margin-top: 0px;
+  line-height: 1.5;
+}
+
+.close {
+  float: right;
+  line-height: 1;
+  color: #000;
+  text-shadow: 0 1px 0 #fff;
+  opacity: .5;
+  margin: 0px;
+  font-size: 30px;
+}
+
+.modal-body {
+  position: relative;
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  padding: 8px 14px;
+  padding-bottom: 20px;
+}
+
+.modal-footer {
+  display: flex;
+
+  flex-direction: row;
+  align-items: center;
+  border-top: 1px solid #e9ecef;
+}
+
+.off-click {
+  background-color: #5e646f;
+  color: white;
+  padding: 10px 13px;
+  border: none;
+  cursor: pointer;
+  width: 55%;
+  border-radius: 7px;
+  margin: 8px;
+  margin-left: 3px;
+  margin-right: 10px;
+}
+
+.nextdel {
+  background-color: rgb(249, 181, 55);
+  color: black;
+  padding: 10px 15px;
+  border: none;
+  cursor: pointer;
+  width: 60%;
+  border-radius: 7px;
+  margin: 8px;
+  margin-left: 3px;
+  margin-right: 3px;
+  text-decoration: none;
+}
+
+.btn-grp { 
+display: flex;
+flex-direction: row;
+margin-right: 15px;
 }
