--- a/views/partials/delete-confirm.ejs
+++ b/views/partials/delete-confirm.ejs
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header ">
                 <h4 class="modal-title">Delete Confirmation</h4>
-                <p class="close" onclick="off()">$times;</p>
+                <p class="close" onclick="off()">&times;</p>
             </div>
             <div class="modal-body">
                 <p id="ask"></p>
@@ -11,7 +11,7 @@
             <div class="model-footer">
                 <div class="btn-grp">
                     <button type="button" class="off-click" onclick="off()">No</button>
-                    <a id="" nextdelete class="nextdel" href="#">Yes</a>
+                    <a id="nextdelete"  class="nextdel" href="#">Yes</a>
                 </div>
             </div>
         </div>
